GameHandler checkGameEnded implemented ; GameHandlerTest updated